Fix file list text overflow issue

--- a/src/app/shared/file-list/file-list.component.scss
+++ b/src/app/shared/file-list/file-list.component.scss
@@ -5,5 +5,12 @@ mat-list {
             flex-direction: row;
             align-items: center;
             justify-content: space-between;
+        button {
+                white-space: nowrap;
+                overflow: hidden;
+                display: block;
+                text-overflow: ellipsis;
+                max-width: 70%;
+        }
     }
 }
